# aaron

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_crawl.sh  scrapy.cfg  setup.cfg
aaron/: __init__.py  base_settings.py  exporters.py  extensions.py  items.py  pipelines.py  settings.py
aaron/spiders/: carnegie.py  cynicmansion.py  pitchfork.py
aaron/templates/: atom.xml.j2  cynicmansion.html.j2  opml.xml.j2  pitchfork.html.j2
conf/: nginx.conf
docker/: collect  collect.sh  crontab  entrypoint  gc  nginx.conf
docker/runit/cron/: run
docker/runit/log/: run
docker/runit/nginx/: run
feeder/: __init__.py  exporters.py  items.py  settings.py
feeder/feeder/: exporters.py  items.py  middlewares.py  pipelines.py  settings.py
feeder/feeder/spiders/: cynicmansion.py  xkcd.py
feeder/spiders/: cynicmansion.py  pitchfork.py  xkcd.py
feeder/templates/: atom.xml.j2  cynicmansion.html.j2  nginx.conf.j2  opml.xml.j2  pitchfork.html.j2  xkcd.html.j2
src/: scrapy.cfg
src/feeder/: settings.py
