[tool.poetry]
name = "feeder"
version = "0.0.1"
description = "Make RSS great again"
authors = ["9seconds <nineseconds@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "feeder" }
]

[tool.poetry.scripts]
crawl = "feeder.bin.crawl:main"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.0"
itemloaders = "^1.1.0"
w3lib = "^2.1.2"
dateparser = "^1.1.8"
lxml = "^4.9.3"
scrapy-fake-useragent = "^1.4.4"

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
flake8-2020 = "^1.8.1"
flake8-bugbear = "^23.7.10"
flake8-secure-coding-standard = "^1.4.0"
flake8-simplify = "^0.20.0"
flake8-string-format = "^0.3.0"
flake8-useless-assert = "^0.4.4"
flake8-warnings = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
